# serde_divatree

./: .gitignore  Cargo.toml  README.org  flake.nix
.github/workflows/: python.yml  release-please.yml
src/: error.rs  lib.rs  py_ffi.rs
src/de/: mod.rs  serde.rs
src/de/serde/: atom.rs  mod.rs
