[package]
name = "serde_divatree"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
miette = { version = "5.8.0", optional = true }
serde = "1.0.126"
thiserror = "1.0.24"

[dev-dependencies]
serde_derive = "1.0.126"
