[package]
name = "serde_divatree"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "serde_divatree"
crate-type = ["lib", "cdylib"]

[dependencies]
eyre = { version="0.6.8", optional= true }
pyo3 = { version = "0.17.0", optional = true, features = ["extension-module", "abi3-py37", "generate-import-lib", "eyre"] }
# pythonize = { git = "https://github.com/sandhose/pythonize", branch="quenting/expose-deserializer", version = "0.17.0" }
pythonize = { git = "https://github.com/Waelwindows/pythonize", branch="expose-deserializer", version = "0.17.0" }
serde = "1.0.126"
# serde-transcode = { version="1.1.1", optional = true }
serde-transcode = { git="https://github.com/dmitmel/serde-transcode", optional = true }
serde_path_to_error = { version="0.1.9", optional =true }
thiserror = "1.0.24"

[dev-dependencies]
serde_derive = "1.0.126"

[features]
"default" = ["pyo3"]
"pyo3" = ["dep:pyo3", "serde-transcode", "serde_path_to_error", "eyre"]
