[package]
name = "serde_divatree"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", optional=true }
serde = "1.0.126"
thiserror = "1.0.24"
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
serde_derive = "1.0.126"
miette = { version = "5.10.0", features=["fancy"] }
env_logger = "0.10.0"
test-log = { version = "0.2.17", features = ["trace"] }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
